# app/Http/Resources/V1/OrderItemResource.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Http\Resources\V1;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class OrderItemResource extends JsonResource
+{
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'product_name' => $this->product_name,
+            'quantity' => $this->quantity,
+            'unit_name' => $this->unit_name,
+            'unit_price' => $this->unit_price,
+            'total_price' => $this->total_price,
+            'notes' => $this->notes,
+            'product' => new ProductResource($this->whenLoaded('product')),
+            'market_product' => new MarketProductResource($this->whenLoaded('marketProduct')),
+        ];
+    }
+}
